--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -26,6 +26,7 @@
     justify-content: center;
     transition: 0.5s;
     z-index: 99;
+    color: white !important;
 }
 
 /*** Button Start ***/
@@ -65,22 +66,23 @@
     font-weight: normal;
     border-radius: 50%;
 }
-
 .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    background-color: #000000;
+    border-color: #000000;
+    box-shadow: inset 0 0 0 0 black;
 }
 
 .btn.btn-primary:hover {
     box-shadow: inset 300px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: black !important;
 }
 
 .btn.btn-light {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 black;
 }
 
 .btn.btn-light:hover {
-    box-shadow: inset 300px 0 0 0 var(--bs-primary);
+    box-shadow: inset 300px 0 0 0 #000;
     color: var(--bs-light) !important;
 }
 
@@ -115,7 +117,7 @@
     transform: translateY(-50%);
     margin-top: 8px;
     margin-left: -100px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #8d8d8d !important;
 }
 
 .section-title .sub-style::after {
@@ -127,14 +129,14 @@
     transform: translateY(-50%);
     margin-bottom: 5px;
     margin-left: -50px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #8d8d8d !important;
 }
 
 .sub-title {
     position: relative;
     display: inline-block;
     text-transform: uppercase;
-    color: var(--bs-primary);
+    color: #8d8d8d;
 }
 
 .sub-title::before {
@@ -146,7 +148,7 @@
     transform: translateY(-50%);
     margin-top: 8px;
     margin-right: -100px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #8d8d8d !important;
 }
 
 .sub-title::after {
@@ -158,7 +160,7 @@
     transform: translateY(-50%);
     margin-bottom: 8px;
     margin-right: -50px;
-    border: 1px solid var(--bs-primary) !important;
+    border: 1px solid #8d8d8d !important;
 }
 
 
@@ -197,7 +199,7 @@
     position: relative;
     margin-right: 25px;
     padding: 35px 0;
-    color: var(--bs-dark) !important;
+    color: #9E9E9E !important;
     font-size: 16px;
     font-weight: 400;
     outline: none;
@@ -206,12 +208,12 @@
 
 .sticky-top.navbar-light .navbar-nav .nav-link {
     padding: 20px 0;
-    color: var(--dark) !important;
+    color: var(--bs-dark)  !important;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--bs-primary) !important;
+    color: black !important;
 }
 
 .navbar-light .navbar-brand img {
@@ -220,7 +222,7 @@
 }
 
 .sticky-top.navbar-light .navbar-brand img {
-    max-height: 45px;
+    max-height: 75px;
 }
 
 .navbar .dropdown-toggle::after {
@@ -280,11 +282,11 @@
     .sticky-top.navbar-light .navbar-nav .nav-link {
         padding: 10px 0;
         margin-left: 0;
-        color: var(--bs-dark) !important;
+        color: #9E9E9E !important;
     }
 
     .navbar-light .navbar-brand img {
-        max-height: 45px;
+         max-height: 80px;
     }
 }
 
@@ -310,7 +312,7 @@
         height: 2px;
         bottom: -1px;
         left: 50%;
-        background: var(--bs-primary);
+        background: var(--bs-dark);
         transition: .5s;
     }
 
@@ -337,7 +339,7 @@
     left: 20px;
     transform: translateY(-50%);
     border-radius: 50%;
-    background: var(--bs-primary);
+    background: #000000;
     color: var(--bs-white);
     font-size: 30px;
     display: flex;
@@ -354,7 +356,7 @@
     right: 20px;
     transform: translateY(-50%);
     border-radius: 50%;
-    background: var(--bs-primary);
+    background: #000000;
     color: var(--bs-white);
     font-size: 30px;
     display: flex;
@@ -371,7 +373,7 @@
 .header-carousel .owl-nav .owl-prev:hover,
 .header-carousel .owl-nav .owl-next:hover {
     box-shadow: inset 150px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: black !important;
 }
 
 @media (max-width: 576px) {
@@ -438,7 +440,8 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/carousel-2.jpg);
+    
+    background: linear-gradient(rgb(243 244 244 / 90%), rgb(163 165 166 / 90%)), url(../img/bateau.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -482,7 +485,7 @@
 
 .service .service-item:hover .service-img::before {
     height: 100%;
-    background: rgba(21, 185, 217, .3);
+    background: rgba(175, 184, 185, 0.3);
 }
 
 .service .service-item .service-img:hover img {
@@ -504,13 +507,13 @@
     left: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background: rgba(21, 185, 217, .5);
+    background: #8d8d8d;
     transition: 0.5s;
     z-index: 3;
 }
 
 .service .service-item:hover .service-content::before {
-    background: rgba(21, 185, 217, .5);
+    background: #8d8d8d;
     height: 100%;
 }
 
@@ -525,7 +528,7 @@
     z-index: 9;
 }
 .service .service-item:hover .service-content .service-content-inner h5 {
-    color: var(--bs-secondary);
+    color: var(--bs-dark);
 }
 
 /*** Service End ***/
@@ -566,7 +569,7 @@
 .feature .feature-item {
     position: relative;
     display: flex;
-    border: 1px solid var(--bs-primary);
+    border: 1px solid #8d8d8d;
     border-radius: 10px;
     background: var(--bs-light);
     transition: 0.5s;
@@ -586,7 +589,8 @@
 
 .feature .feature-item:hover::before {
     width: 100%;
-    background: var(--bs-primary);
+    background: #8d8d8d;
+
 }
 
 .feature .feature-item .feature-icon {
@@ -614,7 +618,7 @@
 
 /*** Appointment Start ***/
 .appointment {
-    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../img/carousel-2.jpg);
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../img/tcc.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -626,12 +630,12 @@
 }
 
 .appointment .appointment-form .btn.btn-primary {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 black;
 }
 
 .appointment .appointment-form .btn.btn-primary:hover {
     box-shadow: inset 600px 0 0 0 var(--bs-light) !important;
-    color: var(--bs-primary) !important;
+    color: black !important;
 }
 /*** Youtube Video start ***/
 .video {
@@ -798,7 +802,7 @@
 
 /*** testimonial Start ***/
 .testimonial {
-    background: linear-gradient(rgba(21, 185, 217, 0.9), rgba(21, 185, 217, 0.9)), url(../img/carousel-1.jpg);
+    background: linear-gradient(rgb(243 244 244 / 90%), rgb(163 165 166 / 90%)), url(../img/carousel-1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1044,7 +1048,7 @@
 
 .blog .blog-item .blog-centent {
     background: var(--bs-light);
-    border: 1px solid var(--bs-primary);
+    border: 1px solid black;
     border-top: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -1054,7 +1058,7 @@
 
 /*** Contact Start ***/
 .contact {
-    background: linear-gradient(rgba(21, 185, 217, 0.9), rgba(21, 185, 217, 0.9)), url(../img/carousel-1.jpg);
+    background: linear-gradient(#e9ecef, #8d8d8d), url(../img/carousel-1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1063,11 +1067,11 @@
 
 
 .contact .contact-form .btn.btn-light {
-    box-shadow: inset 0 0 0 0 var(--bs-primary);
+    box-shadow: inset 0 0 0 0 var(--bs-white);
 }
 
 .contact .contact-form .btn.btn-light:hover {
-    box-shadow: inset 600px 0 0 0 var(--bs-primary) !important;
+    box-shadow: inset 600px 0 0 0 #000 !important;
     color: var(--bs-white) !important;
 }
 
@@ -1179,3 +1183,26 @@
     background: var(--bs-dark) !important;
 }
 /*** copyright end ***/
+
+.text-dark {
+    color: #000 !important;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 0 0.25rem #8d8d8d
+}
+.border-primary {
+    border-color: black !important;
+}
+.tracking {
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url(../img/service.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+img, svg {
+    vertical-align: middle;
+    width: auto;
+    height: auto; /* éviter le 135% qui déforme */
+}
